--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "preview": "vite preview",
     "type-check": "tsc --noEmit"
   },
-  "keywords": ["music", "midi", "practice", "web"],
+  "keywords": [
+    "music",
+    "midi",
+    "practice",
+    "web"
+  ],
   "author": "",
   "license": "MIT",
   "devDependencies": {
@@ -18,6 +23,7 @@
     "vite": "^5.0.11"
   },
   "dependencies": {
+    "jszip": "^3.10.1",
     "opensheetmusicdisplay": "^1.8.7",
     "webmidi": "^3.1.11"
   }
