--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "yargs": "^18.0.0"
   },
   "dependencies": {
+    "@hiseb/confetti": "^2.1.0",
     "@stringsync/musicxml": "^0.3.0",
     "fast-xml-parser": "^5.3.5",
     "jszip": "^3.10.1",
